update leftlet map

--- a/client/views/app.html
+++ b/client/views/app.html
@@ -5,16 +5,15 @@
 			<a toggle-menu class="menu-icon touch-speed" ><span class="ion-navicon"></span></a>
 		</nav>
 		<nav>
-			<h1>		<div id="mana"></div></h1>
+			<h1>Suda</h1>
 		</nav>
 		<nav>
-			Nav
+			<a toggle-menu class="menu-icon touch-speed" ><span class="ion-navigate"></span></a>
 		</nav>
 	</header>
 </div>
+
 <ui-view></ui-view>
-
-
 	
 <pow-menu>
     <div>
