update pick address when user move maps

--- a/client/styles/pow.css
+++ b/client/styles/pow.css
@@ -254,7 +254,7 @@ html, body {
   -webkit-transform: translate3d(-250px, 0, 0);
   transform: translate3d(-250px, 0, 0);
   top: 55px;
-  background: #434b5c;
+  background: #ffffff;
 }
 
 .pow-app .menu-animate{
