--- a/client/views/app.html
+++ b/client/views/app.html
@@ -17,7 +17,14 @@
 	
 <pow-menu>
     <div>
-        <nav class="menu-left" id="myMenu" ng-class="MenuClass"></nav>
+        <nav class="menu-left scroll-content" id="myMenu" ng-class="MenuClass">
+        	<ul>
+        		<li toggle-menu><a href="">Trang chủ</a></li>
+        		<li toggle-menu><a href="">Lịch sử</a></li>
+        		<li toggle-menu><a href="">Thanh toán</a></li>
+        		<li toggle-menu><a href="">Liên hệ</a></li>
+        	</ul>
+        </nav>
     </div>
 </pow-menu>
 
