--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,5 +1,9 @@
 <div class="main-container">
 	<div class="scroll-content" >
 		<div id="map" style="width:100%;height:100%"></div>
+		<div id="callBtn">
+			Request
+		</div>
 	</div>
+
 </div>
