--- a/client/views/app.html
+++ b/client/views/app.html
@@ -8,7 +8,7 @@
 			<h1>&nbsp;</h1>
 		</nav>
 		<nav>
-			<div toggle-menu class="menu-icon touch-speed" ><span class="ion-navigate"></span></div>
+			<div hm-tap="toggleLang()" class="menu-icon touch-speed" ><span class="ion-navigate"></span></div>
 		</nav>
 	</header>
 </div>
@@ -25,6 +25,7 @@
 				<div class="info">
 					<strong>Nguyễn Văn Thịnh</strong> <br/>
 					<p>Đăng xuất</p>
+					<p>{{lang.HELLO_MSG}}</p>
 				</div>
         	</div>
         	<div class="clearfix"></div>
