--- a/client/views/home.html
+++ b/client/views/home.html
@@ -2,7 +2,7 @@
 	<div class="scroll-content" >
 		<div id="map" style="width:100%;height:100%"></div>
 		<div id="callBtn">
-			Request
+			{{lang.REQUEST_BTN}}
 		</div>
 	</div>
 
