update map (don)

--- a/client/views/app.html
+++ b/client/views/app.html
@@ -35,8 +35,7 @@
         		</div>
 				<div class="info">
 					<strong>Nguyễn Văn Thịnh</strong> <br/>
-					<p>Đăng xuất</p>
-					<p>{{lang.HELLO_MSG}}</p>
+					<p>Logout</p>
 				</div>
         	</div>
         	<div class="clearfix"></div>
