update login screen

--- a/client/views/wellcome.html
+++ b/client/views/wellcome.html
@@ -1,1 +1,18 @@
-XIn chao
+<div id="wellcomeState">
+		
+	<h3>Wellcome to login screen</h3>
+	<form>
+		<input type="text" name="username" placeholder="Phone number"> <br/>
+		<input type="password" name="username" placeholder="Password">
+		<div class="buttonAction">
+			<div><button hm-tap="login()">Sign in</button></div>
+			<div><button>Sign in using Facebook</button></div>
+		</div>
+	</form>
+	<div>
+		<p>Register</p>
+		<p>Forgot your password ?</p>
+	</div>
+
+	
+</div>
