--- a/client/views/app.html
+++ b/client/views/app.html
@@ -5,7 +5,7 @@
 			<div toggle-menu class="menu-icon touch-speed" ><span class="ion-navicon"></span></div>
 		</nav>
 		<nav>
-			<h1>&nbsp;</h1>
+			<h1>CrazyTaxi</h1>
 		</nav>
 		<nav>
 			<div hm-tap="toggleLang()" class="menu-icon touch-speed" ><span class="ion-navigate"></span></div>
